# WG-Nia

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE.md  README.md  RECON-region-commit.md  RECON-region-orchestrator.md  pyproject.toml  requirements-dev.txt  requirements.txt  world-engine-schema-changelog.md  world-engine-schema.md
.claude/: launch.json  settings.json
scripts/: analyze_conversation.py  apply_ticket_0012_prompt_rewrite.py  apply_ticket_0013_prompt_updates.py  apply_ticket_0014_prompt_updates.py  apply_ticket_0015_prompt_updates.py  apply_ticket_0016_prompt_updates.py  apply_ticket_0017_prompt_updates.py  apply_ticket_0018_prompt_updates.py  apply_ticket_0019_prompt_updates.py  apply_ticket_0020_prompt_updates.py  apply_ticket_0024_prompt_updates.py  backup.py  cockpit.py  harness_entity_author_replay.py  harness_mutation_apply.py  harness_say_replay.py  harness_tick_replay.py  init_db.py  migrate_v1_16_knowledge_history.py  migrate_v1_21_window_analysis.py  migrate_v1_24.py  migrate_v1_26.py  migrate_v1_30.py  migrate_v1_31_ledger.py  migrate_v1_38_faction_structure.py  migrate_v1_39_faction_membership.py  migrate_v1_40_drop_character_faction_id.py  migrate_v1_41_cover_role.py  migrate_v1_44_aversion.py  migrate_v1_54.py  migrate_v1_57.py  migrate_v1_63.py  migrate_v1_65_pc_skill_backfill.py  migrate_v1_67_prompt_model.py  migrate_v1_68_prompt_version.py  migrate_v1_69_npc_goal.py  migrate_v1_70_tick_id.py  migrate_v1_71_visit.py  migrate_v1_72_agenda.py  migrate_v1_73_goal_agenda_link.py  (+22 more)
(+376 files in other folders)
