[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-engine"
version = "0.1.0"
description = "Local, single-player-first engine for running a persistent RPG world."
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.16",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
